--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
    		  <body>
    		   <script src="http://d3js.org/d3.v3.min.js"></script>
    		    <script> 
-   		    var year ='1950-1955';
+   		    var year ='1975-1979';
 
-   		    var buttonPeriod = ['1950-1955','1955-1960','1960-1965','1965-1970','1970-1975','1975-1980','1980-1985','1985-1990','1990-1995','1995-2000','2000-2005','2005-2010','2010-2015','2015-2020','2020-2025','2025-2030','2030-2035','2035-2040','2040-2045','2045-2050'];
+   		    var buttonPeriod = ['1975-1979','1980-1984','1985-1989','1990-1994','1995-1999','2000-2004','2005-2009','2010-2014','2015-2019','2020-2024','2025-2029','2030-2034','2035-2039','2040-2044','2045-2049'];
 
 			var margin = {top: 30, right: 0, bottom: 0, left: 100}, 
 				width = 500 - margin.left - margin.left,
