--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
    		    <script> 
    		    var year ='1975-1979';
 
-   		    var buttonPeriod = ['1975-1979','1980-1984','1985-1989','1990-1994','1995-1999','2000-2004','2005-2009','2010-2014','2015-2019','2020-2024','2025-2029','2030-2034','2035-2039','2040-2044','2045-2049'];
+   		    var buttonPeriod = ['1975-1979','1980-1984','1985-1989','1990-1994','1995-1999','2000-2004','2005-2009','2010-2014','2015-2019','2020-2024','2025-2029','2030-2034','2035-2039','2040-2044','2045-2049']; //Define the period that I want to see
 
+   		    //Define Structural variables
 			var margin = {top: 30, right: 0, bottom: 0, left: 100}, 
 				width = 500 - margin.left - margin.left,
 				height = 450 - margin.top - margin.bottom;
@@ -85,14 +86,14 @@
 		   function keys(d){
 		   	return d.age;
 		   }
-
+		   //Add Tital
 		   body.append("h2")
 		   	   .text("Births by Age of Mother-USA");
-
+		   //Add playAll Button 
 		   var playAll = body.append('div')
 		   		.attr('class','play-button')
 		   		.text('PLAY ALL YEARS');
-
+		   	//Add iteration buttons
 		   	var buttons=body.append("div")
 		   		.attr("class", "buttons-container")
 		   		.selectAll("div").data(buttonPeriod)
@@ -119,30 +120,34 @@
 
 		   body.append("div")
 		   		.attr('class','clearfix') 
- 
+ 			//Load the datafile, all code beyond this should be tied to data
 		   	d3.csv('allData-Births.csv',function(error,data){
 			var BirthData = data.filter(function(element) {return element.year == year});
+			//Define the ranged on x and y scaler functions
 			x.domain([0,d3.max(data, function(element) {return element.value})]);
 			y.domain(BirthData.map(function(element) {return element.age}))
 
+			//Create the SVG element
 		   	var svg = body.append('svg')
 		   		.attr('width',width+margin.left+margin.right)
 		   		.attr('height',height+margin.top+margin.bottom)
 		   		.append('g')
 		   			.attr('transform','translate('+margin.left + ','+margin.top+')');
 
+		   	//Append Group element for chart
 		   	var barGroup = svg.append('g')
 		   		.attr('class','bar');	
-
+		    //Add the bars to the chart
 		   	var bars=barGroup.selectAll('rect')
 		   		.data(BirthData,keys)
 		   		.enter()
-		   		.append('rect')
+		   		.append('rect') //Define the bar attributes
 		   			.attr('x',0)
 		   			.attr('y',function(d){return y(d.age)})
 		   			.attr('width',function(d){return x(d.value)})
 		   			.attr('height',y.rangeBand());
 
+		   	//Add the axis
 		   	svg.append('g')
 		   		.call(xAxis)
 		   		.attr('class','x axis')
@@ -151,12 +156,14 @@
 		   		.call(yAxis)
 		   		.attr('class','y axis')
 		   	
+		   	//Set up event handler on buttons
 		   	buttons.on('click',function(d){
 		   		update(d);
-		   		clearInterval(playInterval);});
+		   		clearInterval(playInterval);}); //Enable Stop functionality
 
 		   	var playInterval;
 
+		   	//Define the event handling for the playAll button
 		   	playAll.on('click',function(){
 		   		var i =0; //define i outside of loop
 
@@ -170,14 +177,14 @@
 		   		},700);
 		   		});
 		   	
-
+		   	//Update function
 		   	function update(updatePeriod) {
 		   		 	d3.select(".selected")
 		   		 		.classed("selected", false); //Remove Class selected from the currently selected button
-		   		 	buttons.filter(function(d){return d== updatePeriod;})
-		   		 		.classed('selected',true) 
-		   		 	BirthData = data.filter(function(element){return element.year == updatePeriod});
-		   		 	bars.data(BirthData,keys)
+		   		 	buttons.filter(function(d){return d== updatePeriod;}) //if Period equals the current update period then run below
+		   		 		.classed('selected',true) //add class selected to button
+		   		 	BirthData = data.filter(function(element){return element.year == updatePeriod}); //Show only data for current selected year
+		   		 	bars.data(BirthData,keys) //Re define bar width based on current value
 		   		 		.transition()
 		   		 		.delay(500)
 		   		 		.duration(500)
